fix: polish to navigation, align, bar and tray

--- a/src/styles/app/bar.sass
+++ b/src/styles/app/bar.sass
@@ -56,6 +56,5 @@ body:has(header.cn-app-bar.modal) main
 @include media-query-desktop
   header.cn-app-bar
     margin-left: var(--cn-rail-width)
-    transition: margin-left 0.3s ease-in-out  
   body:has(cn-tray-button[aria-expanded="true"]) header.cn-app-bar
     margin-left: calc(var(--cn-rail-width) + var(--cn-tray-width))
