--- a/src/styles/atomics/padding.sass
+++ b/src/styles/atomics/padding.sass
@@ -27,6 +27,9 @@
 .pt-1
   padding-top: var(--cn-grid)
 
+.pt-2
+  padding-top: calc(var(--cn-grid) * 2)
+
 .pb-0
   padding-bottom: 0
 
